--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@octokit/core": "^4.2.1",
     "@prisma/client": "^4.14.1",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "10.4.14",
