--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "10.4.14",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
