--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@octokit/core": "^5.0.2",
-    "@prisma/client": "^5.7.0",
+    "@octokit/core": "^5.1.0",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "10.4.16",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
-    "nodemailer": "^6.9.7",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,18 +25,19 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^14.0.4",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.7.0"
-  }
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prisma": "^5.11.0"
+  },
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
 }
